--- a/src/components/TableOrders/styles.css
+++ b/src/components/TableOrders/styles.css
@@ -12,7 +12,7 @@
 }
 
 .table-head strong {
-  width: 25%;
+  width: 16rem;
   font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
   line-height: 1.4rem;
@@ -30,7 +30,7 @@
   position: relative;
 }
 .table-line span {
-  width: 25%;
+  width: 16rem;
   font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
   line-height: 1.4rem;
@@ -52,8 +52,8 @@
   position: absolute;
   display: flex;
   align-items: center;
-  right: 3.2rem;
-  gap: 1.6rem;
+  right: 1.3rem;
+  gap: 0.6rem;
   cursor: pointer;
 }
 .plus-icon {
